# leptos-and-stylance-rs-hello-world

./: Cargo.toml  README.md  index.html  trunk.toml
src/: app.module.scss  app.rs  count.module.scss  count.rs  main.rs
