[package]
name = "flowful"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.15", features = ["csr"] }
stylance = "0.5.2"

[package.metadata.stylance]
output_dir = "./styles/"
folders = ["./src/", "./styles/"]
# output_file = "./index.css"
